# elevenlabs-python

./: .fernignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  API.md  CONTRIBUTING.md  LICENSE  README.md  WEBRTC_CHANGES.md  changelog.md  generate_audio.py  input.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  reference.md  repro.py  requirements.txt  setup.py  verify_types.py
.fern/: metadata.json
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  config.yml
.github/workflows/: ci.yml  tests.yml
.mock/: asyncapi.yml  fern.config.json  openapi.json
.mock/definition/: __package__.yml  api.yml  audioIsolation.yml  audioNative.yml  conversationalAi.yml  dubbing.yml  forcedAlignment.yml  history.yml  models.yml  projects.yml  pronunciationDictionaries.yml  pronunciationDictionary.yml  samples.yml  speechToSpeech.yml  speechToText.yml  studio.yml  textToDialogue.yml  textToSoundEffects.yml  textToSpeech.yml  textToVoice.yml  usage.yml  user.yml  v1TextToSpeechStreamInput.yml  v1TextToSpeechVoiceIdMultiStreamInput.yml  v1TextToSpeechVoiceIdStreamInput.yml  voiceGeneration.yml  voices.yml  workspace.yml
.mock/definition/conversationalAi/: agents.yml  batchCalls.yml  llmUsage.yml  (+7 more)
elevenlabs/: __init__.py  simple.py  utils.py
elevenlabs/api/: __init__.py  base.py  error.py  history.py  model.py  tts.py  tts_stream.py  user.py  voice.py
elevenlabs/tests/: README.md  test_simple.py  utils.py
examples/: webrtc_conversation_example.py
samples/: voice.webm
src/elevenlabs/: __init__.py  base_client.py  client.py  clone.py  conversation.py  environment.py  generate.py  model.py  music_custom.py  play.py  raw_base_client.py  realitme_tts.py  realtime_tts.py  speech_engine_custom.py  speech_to_text_custom.py  tts.py  url_utils.py  version.py  voice.py  webhooks.py  webhooks_custom.py
tests/: async_eleven.py  e2e_test_convai.py  test_additional_format_response.py  test_async_convai.py  test_async_generation.py  test_audio_isolation.py  test_client.py  test_client_headers.py  test_client_init.py  test_client_tools.py  test_convai.py  test_convai_create_agent.py  test_convai_imports.py  test_convai_on_prem.py  test_history.py  test_model.py  test_models.py  test_music_multipart.py  test_recursive_models.py  test_speech_engine_auth.py  test_speech_engine_custom.py  test_speech_engine_resource.py  test_speech_engine_server.py  test_speech_engine_session.py  test_sts.py  test_stt.py  test_stt_keyterms.py  test_stt_realtime.py  test_tts.py  test_ttsfx.py  test_ttv.py  test_url_utils.py  test_voice.py  test_voices.py  test_webhooks.py  test_webrtc_conversation.py  utils.py  verify_types.py
tests/custom/: test_convai.py  test_convai_imports.py  test_history.py  test_models.py  test_tts.py  test_ttv.py  utils.py
(+2732 files in other folders)
