[tool.poetry]
name = "elevenlabs"
version = "v0.3.0-b0"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "elevenlabs", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = ">=0.21.2"
ipython = ">=7.0"
pydantic = ">= 1.9.2, < 2.5.0"
requests = ">=2.20"
websockets = ">=11.0"

[tool.poetry.dev-dependencies]
mypy = "0.971"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
