[tool.poetry]
name = "elevenlabs"
version = "v1.0.0b0"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "elevenlabs", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.21.2"
ipython = ">=7.0"
pydantic = ">= 1.9.2"
requests = ">=2.20"
typing_extensions = ">= 4.0.0"
websockets = ">=11.0"

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
