[tool.poetry]
name = "elevenlabs"
version = "1.10.0"
description = ""
readme = "README.md"
authors = []
keywords = []
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License"
]
packages = [
    { include = "elevenlabs", from = "src"}
]

[project.urls]
Repository = 'https://github.com/elevenlabs/elevenlabs-python'

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.21.2"
pydantic = ">= 1.9.2"
pydantic-core = "^2.18.2"
requests = ">=2.20"
typing_extensions = ">= 4.0.0"
websockets = ">=11.0"

# Optional extras.
pyaudio = { version = ">=0.2.14", optional = true }

[tool.poetry.dev-dependencies]
mypy = "1.0.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
python-dateutil = "^2.9.0"
types-pyaudio = "^0.2.16.20240516"
types-python-dateutil = "^2.9.0.20240316"
ruff = "^0.5.6"

[tool.poetry.extras]
pyaudio = ["pyaudio"]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
